# hyperpanes

./: .gitattributes  .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  smoke-reminders.ps1  tsconfig.json
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: llm-review.yml  merge-guard.yml  release-rust.yml  release.yml  test.yml  verify.yml
bench/: FINDINGS-native-vs-electron.md  FINDINGS-trackH-perf.md  README.md  detect.mjs  package.json  run.mjs  terminals.config.mjs
bench/lib/: args.mjs  launch.mjs  report.mjs  stream.mjs
bench/measure/: proctree.mjs  proctree.ps1  timing.mjs
bench/workloads/: fill-scrollback.mjs  idle.mjs  startup-probe.mjs  throughput.mjs
docs/: agent-orchestration-plan.md  auto-merge.md  cli-multiwindow-mcp-plan.md  conpty-passthrough-investigation.md  dnd-cases.md  dpi-fractional-scale-verification.md  goals-system-plan.md  hyperpanes-format.md  interactive-pane-driving-plan.md  mobile-client-plan.md  ports-integration-report.md  ports-seams.md  queue-gui-roadmap.md  session-daemon-plan.md  worker-pool.md
mobile/hyperpanes_mobile/: README.md  pubspec.yaml
resources/claude/: hp-claude-session-hook.sh
resources/conpty/: README.md
resources/shell-integration/: hp-init.ps1  hp-init.sh
rs/: Cargo.toml  PACKAGING.md  README.md
rs/crates/app/: ARCHITECTURE.md  Cargo.toml  build.rs
rs/crates/app/cursors/: NOTICE.md  grab.cur  grabbing.cur
rs/crates/app/src/: ai.rs  app.rs  command.rs  contextmenu.rs  control_cli.rs  control_host.rs  crash.rs  devices.rs  drag.rs  glow.rs  history_scan.rs  keybindings.rs  main.rs  pair.rs  palette.rs  paneview.rs  prefs.rs  sidebar.rs  state.rs  tetris.rs  theme.rs  update.rs  window.rs  worker.rs
rs/crates/app/src/drag/: linux.rs  macos.rs  mod.rs  windows.rs
rs/crates/app/src/prefs/: mod.rs  platform_linux.rs  platform_macos.rs  platform_windows.rs
rs/crates/app/src/update/: linux.rs  macos.rs  mod.rs  windows.rs
rs/crates/app/src/window/: linux.rs  macos.rs  mod.rs  windows.rs
rs/crates/app/ui/: addproject.slint  app.slint  contextmenu.slint  newgoal.slint  newpane.slint  overlays.slint  paneview.slint  sidebar.slint  theme.slint  topbar.slint  types.slint
rs/crates/core/: Cargo.toml
rs/crates/core/src/: ansi_strip.rs  app.rs  claude_accounts.rs  claude_history.rs  claude_hook.rs  claude_panes.rs  lib.rs  paths.rs  resume_queue.rs  session_manager.rs  shell_integration.rs  single_instance.rs
rs/crates/core/src/ai/: ai_store.rs  mod.rs  ollama.rs  pane_buffer.rs  redactor.rs  scheduler.rs  service.rs
rs/crates/core/src/cli/: mod.rs  parse.rs  routing.rs
rs/crates/core/src/control/: dispatch.rs  events.rs  inbox.rs  input.rs  lock.rs  mod.rs  output.rs  readmodel.rs  routes.rs  scope.rs  server.rs  supervisor.rs  tokens.rs  work.rs
rs/crates/core/src/layout/: mod.rs  navigate.rs  presets.rs  sizes.rs
rs/crates/core/src/persistence/: control_settings.rs  device_tokens.rs  mod.rs  paths.rs  projects.rs
rs/crates/core/src/session/: batcher.rs  cwd.rs  daemon.rs  daemon_client.rs  env.rs  mod.rs  osc133.rs  proto.rs  pty.rs  replay.rs  screen.rs  spawn.rs  windows.rs
rs/crates/core/src/session/env/: mod.rs  unix.rs  windows.rs
rs/crates/core/src/single_instance/: mod.rs  unix.rs  windows.rs
rs/crates/core/src/workspace/: io.rs  launch.rs  mod.rs  model.rs
rs/crates/core/tests/: control_parity.rs  task_wire_contract.rs  workspace_format.rs
rs/crates/core/tests/fixtures/: README.md  task-wire.golden.json
rs/crates/core/tests/mcp-gate/: README.md  gate.mjs  ws_check.mjs
rs/crates/terminal-widget/: Cargo.toml  README.md  build.rs
rs/crates/terminal-widget/examples/: cursor_underline_check.rs  fallback_check.rs
rs/crates/terminal-widget/src/: clipboard.rs  font.rs  grid.rs  keys.rs  lib.rs  links.rs  pane.rs  render.rs  search.rs  selection.rs
rs/crates/terminal-widget/tests/: grid_reference.rs  keymap_reference.rs  pointer_press.rs  selection_reference.rs
rs/crates/terminal-widget/ui/: widget.slint
rs/packaging/: .gitignore  appimage.sh  build-installer.ps1  deb.sh  installer.nsi  rpm.sh
rs/packaging/linux/: README.md  hyperpanes-mime.xml  hyperpanes.desktop
rs/packaging/macos/: README.md  bundle.sh
rs/spikes/conpty-probe/: .gitignore  Cargo.toml  phases.mjs
rs/spikes/conpty-probe/results/: 7019-comment.md  inbox-noregion.txt  inbox-region-10rows.txt  inbox-region-40rows.txt  inbox-region-passthrough.txt  inbox-region.txt  sideload-noregion.txt  sideload-phases.txt  sideload-region-passthrough.txt  sideload-region-resize.txt  sideload-region.err.txt  sideload-region.txt
rs/spikes/conpty-probe/src/: main.rs
rs/spikes/tearoff/: Cargo.toml  RESULTS.md
rs/spikes/tearoff/src/: main.rs
rs/spikes/terminal-render/: Cargo.toml  RESULTS.md
rs/spikes/terminal-render/src/: font.rs  main.rs  render.rs  term_backend.rs
rs/spikes/terminal-render/ui/: app.slint
rs/tools/: control-parity-probe.py  dbg-zsh.sh  run-mac-smoke.sh  run-unix-smoke.sh  unix-smoke.py  win-handoff-smoke.ps1
scripts/: check-dx-regressions.sh  check-pty.js  llm-review.sh  make-icon.mjs  make-repo-assets.mjs  setup-claude-accounts.sh
src/main/: ansi-strip.test.ts  ansi-strip.ts  control-inbox.test.ts  control-inbox.ts  control-input.test.ts  control-input.ts  control-lock.test.ts  control-lock.ts  control-output.test.ts  control-output.ts  control-scope.test.ts  control-scope.ts  control-server.ts  git.ts  index.ts  ipc.ts  metrics.ts  paths.ts  projects.test.ts  projects.ts  session-manager.ts  session.test.ts  session.ts  shell-integration.test.ts  shell-integration.ts  window-geometry.test.ts  window-geometry.ts  window.ts  workspace.test.ts  workspace.ts
src/main/ai/: ai-service.ts  (+10 more)
src/preload/: index.ts
src/renderer/: App.tsx  control.test.ts  control.ts  dragGuard.ts  global.d.ts  index.html  keybindings.ts  liveTearOff.ts  paneDrag.ts  paneScreens.ts  perf.ts  screen.test.ts  screen.ts  stitch.ts  styles.css  theme.test.ts  theme.ts  types.ts
workspaces/: claude-dev.json  example-unix.json  example.json
(+78 files in other folders)
