[package]
name = "hyperpanes"
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
publish = false

# Standalone workspace root (the GUI binary; owns the heavy Slint/GPU deps). You OWN this
# file — adjust deps freely. Path-deps into the core + the terminal widget.
[workspace]

[[bin]]
name = "hyperpanes"
path = "src/main.rs"

[dependencies]
hyperpanes-core = { path = "../core" }
hyperpanes-terminal-widget = { path = "../terminal-widget" }
# `raw-window-handle-06` exposes the native HWND (for the frameless-window Win32 glue).
slint = { version = "1.16", features = [
    "unstable-wgpu-28",
    "renderer-femtovg-wgpu",
    "raw-window-handle-06",
] }
raw-window-handle = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
# Wave-2 preferences persistence (a small native-settings.json blob).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Frameless window / custom titlebar (strip WS_CAPTION + the HTCAPTION drag trick + min/max/close)
# — lifted from spike-tearoff.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[build-dependencies]
slint-build = "1.16"

# Keep the software renderer + UI smooth in dev (matches the terminal-widget profile).
[profile.dev.package."*"]
opt-level = 3
[profile.dev]
opt-level = 1
