[package]
name = "hyperpanes"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false

# Standalone workspace root (the GUI binary; owns the heavy Slint/GPU deps). You OWN this
# file — adjust deps freely. Path-deps into the core + the terminal widget.
[workspace]

[[bin]]
name = "hyperpanes"
path = "src/main.rs"

[dependencies]
hyperpanes-core = { path = "../core" }
hyperpanes-terminal-widget = { path = "../terminal-widget" }
# `raw-window-handle-06` exposes the native HWND (for the frameless-window Win32 glue).
# Pinned to our fork's `popup-is-open` branch for `PopupWindow.is-open` (slint-ui/slint#12000).
# Slint master's femtovg-wgpu renderer links wgpu 29, so we use `unstable-wgpu-29`.
# Slint's default features minus `accessibility`: accesskit pins `windows 0.58`, which collides with
# wgpu-hal 29's `windows 0.62` (gpu-allocator's loose range gets dragged down to 0.58). Dropping
# accessibility lets gpu-allocator resolve up to 0.62 and unify with wgpu-hal. Must match the
# terminal-widget crate (feature unification is additive across the workspace).
slint = { git = "https://github.com/Eyalm321/slint", branch = "popup-is-open", default-features = false, features = [
    "std",
    "backend-default",
    "renderer-femtovg",
    "renderer-software",
    "compat-1-2",
    "unstable-wgpu-29",
    "renderer-femtovg-wgpu",
    "raw-window-handle-06",
] }
raw-window-handle = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
# Wave-2 preferences persistence (a small native-settings.json blob).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Native Open/Save file dialogs for the application menu's workspace items. On Windows this
# uses the COM IFileDialog via `windows-sys` (separate from the `windows` crate below, so it
# doesn't perturb the pinned 0.62 graph); no GTK/xdg on this Windows-first target.
rfd = { version = "0.15", default-features = false }
# Frameless window / custom titlebar (strip WS_CAPTION + the HTCAPTION drag trick + min/max/close)
# — lifted from spike-tearoff. Bumped 0.58 -> 0.62 to unify with wgpu-hal 29 / gpu-allocator and
# avoid two `windows` crate versions in the graph (which breaks wgpu-hal's d3d12 backend).
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[build-dependencies]
slint-build = { git = "https://github.com/Eyalm321/slint", branch = "popup-is-open" }

# Keep the software renderer + UI smooth in dev (matches the terminal-widget profile).
[profile.dev.package."*"]
opt-level = 3
[profile.dev]
opt-level = 1
