[package]
name = "hyperpanes"
version = "0.0.16"
edition = "2021"
license = "MIT"
description = "Tiled terminal workspace with AI-pane orchestration"
rust-version = "1.85"
publish = false

# Standalone workspace root (the GUI binary; owns the heavy Slint/GPU deps). You OWN this
# file — adjust deps freely. Path-deps into the core + the terminal widget.
[workspace]

[[bin]]
name = "hyperpanes"
path = "src/main.rs"

[dependencies]
hyperpanes-core = { path = "../core" }
hyperpanes-terminal-widget = { path = "../terminal-widget" }
# `raw-window-handle-06` exposes the native HWND (for the frameless-window Win32 glue).
# Pinned to upstream slint-ui/slint master rev 9463a107 — back on upstream now that every fix we
# carried in the fork has landed there: `PopupWindow.is-open` (#12000, merged; fixed in the compiler
# `move_declarations`/`visit_all_named_references` passes — i.e. our COMPILED slint-build path) + the
# femtovg-wgpu Wayland first-frame `Surface::configure` panic fix (#12099, merged) + the matching
# skia-wgpu fix (#12100, merged — its merge commit IS this rev). Pinned by rev (not branch) to stop
# master drift; bump deliberately. No tagged release carries the wgpu fix yet (v1.16.1 predates it).
# Slint master's femtovg-wgpu renderer links wgpu 29, so we use `unstable-wgpu-29`.
# Slint's default features minus `accessibility`: accesskit pins `windows 0.58`, which collides with
# wgpu-hal 29's `windows 0.62` (gpu-allocator's loose range gets dragged down to 0.58). Dropping
# accessibility lets gpu-allocator resolve up to 0.62 and unify with wgpu-hal. Must match the
# terminal-widget crate (feature unification is additive across the workspace).
slint = { git = "https://github.com/slint-ui/slint", rev = "9463a107aeb5f5021c162e82c55977c5333229ae", default-features = false, features = [
    "std",
    "backend-default",
    "renderer-femtovg",
    "renderer-software",
    "compat-1-2",
    "unstable-wgpu-29",
    "renderer-femtovg-wgpu",
    "raw-window-handle-06",
    # Linux chrome ops must go through the winit window object (Wayland has no global-handle
    # protocol); this exposes the slint::winit_030 accessor. Additive — no behavior change
    # on Windows/macOS.
    "unstable-winit-030",
] }
raw-window-handle = "0.6"
# Clipboard writes from the crash reporter ("Send diagnostics" → copy full report). The
# terminal-widget already vendors arboard; the crash reporter is a separate code path here.
arboard = "3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
# Wave-2 preferences persistence (a small native-settings.json blob).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Self-update (Task 8): a blocking GitHub-Releases check + installer download, run on a
# dedicated background thread (never the UI thread). `blocking` over the already-present
# (via core) reqwest; rustls-tls to avoid an OpenSSL build dep on Windows.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
# `hyperpanes pair` terminal QR for mobile-app pairing (pure Rust, no image backend).
qrcode = { version = "0.14", default-features = false }
# Native Open/Save file dialogs: see the per-target rfd declarations below (Windows needs
# no backend feature; Linux/macOS need one, so the dep is target-split).
# Frameless window / custom titlebar (strip WS_CAPTION + the HTCAPTION drag trick + min/max/close)
# — lifted from spike-tearoff. Bumped 0.58 -> 0.62 to unify with wgpu-hal 29 / gpu-allocator and
# avoid two `windows` crate versions in the graph (which breaks wgpu-hal's d3d12 backend).
# Target-gated so Linux/macOS builds never pull the Win32 bindings.
[target.'cfg(windows)'.dependencies]
# Native Open/Save dialogs via the COM IFileDialog (`windows-sys`, separate from the
# `windows` crate below so it doesn't perturb the pinned 0.62 graph); no backend feature
# needed on Windows.
rfd = { version = "0.15", default-features = false }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    # GetLocalTime — reminder panes need the LOCAL wall clock ("tomorrow 9am", due labels).
    "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

# X11 global pointer (QueryPointer) for cross-window pane tear-off + the override-redirect
# drag ghost. Pure-Rust XCB, no C deps. Linux only (the unix-minus-macos cfg).
[target.'cfg(not(any(windows, target_os = "macos")))'.dependencies]
x11rb = "0.13"

# AppKit bindings for the macOS window chrome (hidden titlebar + traffic lights), cursors,
# and the NSEvent-based global pointer for cross-window tear-off. Validated green on the
# mini by track T3 — feature names track AppKit header names.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSGeometry", "NSString", "NSArray", "NSProcessInfo"] }
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "objc2-core-foundation", "NSWindow", "NSResponder", "NSView", "NSEvent", "NSCursor", "NSScreen", "NSApplication", "NSColor", "NSGraphics", "NSGraphicsContext", "NSPasteboard"] }

# Unix local wall clock (`localtime_r`) for reminder due-times — epoch math is UTC and
# would put "tomorrow 9am" off by the timezone offset.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
# rfd requires picking a backend off-Windows: xdg-portal (no GTK dev-dep) + tokio (its
# portal transport needs an async runtime, and tokio is already in the tree).
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint", rev = "9463a107aeb5f5021c162e82c55977c5333229ae" }

# Keep the software renderer + UI smooth in dev (matches the terminal-widget profile).
[profile.dev.package."*"]
opt-level = 3
[profile.dev]
opt-level = 1

# ---------------------------------------------------------------------------
# Linux distro packaging (deb via `cargo deb`, rpm via `cargo generate-rpm`).
# Built by rs/packaging/{deb,rpm}.sh. FHS layout: the binary goes to /usr/bin and the
# shell-integration scripts to /usr/share/hyperpanes/resources/shell-integration — found by
# the prefix-relative candidate in core::shell_integration::shell_integration_dir(). Asset
# `source` paths are relative to THIS manifest dir (rs/crates/app). Keep both asset lists in
# sync; they mirror the AppDir that rs/packaging/appimage.sh assembles.
[package.metadata.deb]
maintainer = "Eyal Mizrachi <eyal@sunsationsusa.com>"
copyright = "2026 Eyalm321, MIT"
section = "utils"
priority = "optional"
extended-description = "Hyperpanes is a native tiled terminal workspace with tabs-as-workspaces, pane drag/tear-off, clickable paths, and AI-pane orchestration over a control API."
depends = "libc6, libfontconfig1, libfreetype6, libxkbcommon0"
assets = [
    ["target/release/hyperpanes", "/usr/bin/hyperpanes", "755"],
    ["../../../resources/shell-integration/hp-init.sh", "/usr/share/hyperpanes/resources/shell-integration/hp-init.sh", "644"],
    ["../../../resources/shell-integration/hp-init.ps1", "/usr/share/hyperpanes/resources/shell-integration/hp-init.ps1", "644"],
    ["../../../resources/shell-integration/zdotdir/.zshenv", "/usr/share/hyperpanes/resources/shell-integration/zdotdir/.zshenv", "644"],
    ["../../../resources/shell-integration/zdotdir/.zshrc", "/usr/share/hyperpanes/resources/shell-integration/zdotdir/.zshrc", "644"],
    ["../../packaging/linux/hyperpanes.desktop", "/usr/share/applications/hyperpanes.desktop", "644"],
    ["../../packaging/linux/hyperpanes-mime.xml", "/usr/share/mime/packages/hyperpanes.xml", "644"],
    ["../../packaging/linux/icons/hicolor/16x16/apps/hyperpanes.png", "/usr/share/icons/hicolor/16x16/apps/hyperpanes.png", "644"],
    ["../../packaging/linux/icons/hicolor/32x32/apps/hyperpanes.png", "/usr/share/icons/hicolor/32x32/apps/hyperpanes.png", "644"],
    ["../../packaging/linux/icons/hicolor/48x48/apps/hyperpanes.png", "/usr/share/icons/hicolor/48x48/apps/hyperpanes.png", "644"],
    ["../../packaging/linux/icons/hicolor/64x64/apps/hyperpanes.png", "/usr/share/icons/hicolor/64x64/apps/hyperpanes.png", "644"],
    ["../../packaging/linux/icons/hicolor/128x128/apps/hyperpanes.png", "/usr/share/icons/hicolor/128x128/apps/hyperpanes.png", "644"],
    ["../../packaging/linux/icons/hicolor/256x256/apps/hyperpanes.png", "/usr/share/icons/hicolor/256x256/apps/hyperpanes.png", "644"],
    ["../../packaging/linux/icons/hicolor/512x512/apps/hyperpanes.png", "/usr/share/icons/hicolor/512x512/apps/hyperpanes.png", "644"],
]

[package.metadata.generate-rpm]
summary = "Tiled terminal workspace with AI-pane orchestration"
# No find-requires on the build host (Fedora rpm-build tooling not assumed) — skip auto deps.
auto-req = "no"
requires = { fontconfig = "*", freetype = "*", libxkbcommon = "*" }
assets = [
    { source = "target/release/hyperpanes", dest = "/usr/bin/hyperpanes", mode = "0755" },
    { source = "../../../resources/shell-integration/hp-init.sh", dest = "/usr/share/hyperpanes/resources/shell-integration/hp-init.sh", mode = "0644" },
    { source = "../../../resources/shell-integration/hp-init.ps1", dest = "/usr/share/hyperpanes/resources/shell-integration/hp-init.ps1", mode = "0644" },
    { source = "../../../resources/shell-integration/zdotdir/.zshenv", dest = "/usr/share/hyperpanes/resources/shell-integration/zdotdir/.zshenv", mode = "0644" },
    { source = "../../../resources/shell-integration/zdotdir/.zshrc", dest = "/usr/share/hyperpanes/resources/shell-integration/zdotdir/.zshrc", mode = "0644" },
    { source = "../../packaging/linux/hyperpanes.desktop", dest = "/usr/share/applications/hyperpanes.desktop", mode = "0644" },
    { source = "../../packaging/linux/hyperpanes-mime.xml", dest = "/usr/share/mime/packages/hyperpanes.xml", mode = "0644" },
    { source = "../../packaging/linux/icons/hicolor/16x16/apps/hyperpanes.png", dest = "/usr/share/icons/hicolor/16x16/apps/hyperpanes.png", mode = "0644" },
    { source = "../../packaging/linux/icons/hicolor/32x32/apps/hyperpanes.png", dest = "/usr/share/icons/hicolor/32x32/apps/hyperpanes.png", mode = "0644" },
    { source = "../../packaging/linux/icons/hicolor/48x48/apps/hyperpanes.png", dest = "/usr/share/icons/hicolor/48x48/apps/hyperpanes.png", mode = "0644" },
    { source = "../../packaging/linux/icons/hicolor/64x64/apps/hyperpanes.png", dest = "/usr/share/icons/hicolor/64x64/apps/hyperpanes.png", mode = "0644" },
    { source = "../../packaging/linux/icons/hicolor/128x128/apps/hyperpanes.png", dest = "/usr/share/icons/hicolor/128x128/apps/hyperpanes.png", mode = "0644" },
    { source = "../../packaging/linux/icons/hicolor/256x256/apps/hyperpanes.png", dest = "/usr/share/icons/hicolor/256x256/apps/hyperpanes.png", mode = "0644" },
    { source = "../../packaging/linux/icons/hicolor/512x512/apps/hyperpanes.png", dest = "/usr/share/icons/hicolor/512x512/apps/hyperpanes.png", mode = "0644" },
]
