[package]
name = "hyperpanes-core"
version = "0.0.0"
edition = "2021"
# 1.89: std File::try_lock (unix single-instance detector). Toolchains in play are 1.95+.
rust-version = "1.89"
publish = false

# Dependencies are PRE-DECLARED by the fan-out scaffold so no track edits this file
# (a parallel Cargo.toml edit would collide at merge). Need another crate or feature?
# STOP and ask the orchestrator — it's a checkpoint, not a unilateral edit.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Wave 1: live backend ---
# session-engine: PTY + terminal model
portable-pty = "0.9"
alacritty_terminal = "0.26"
# async runtime (ai scheduler/client; the live core broadly)
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "io-util", "macros", "process", "fs"] }
# ai: Ollama HTTP client (rustls to avoid an OpenSSL build dep on Windows)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# persistence-cli: userData dir + ids
directories = "5"
uuid = { version = "1", features = ["v4"] }
# --- Wave 2: control server (HTTP + WS) ---
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
subtle = "2"      # constant-time master-token compare (timingSafeEqual parity)
rand = "0.8"      # 32-random-byte hex master token
# --- Phase 2: durable work queue (control/work.rs) ---
# SQLite-with-WAL is the design's chosen store (atomic competing-consumers claim,
# indexed visibility-timeout reap, count-by-state); `bundled` compiles the
# amalgamation so the queue ships inside the single native binary (no libsqlite3
# system dep) — consistent with the single-binary goal of the native rewrite.
rusqlite = { version = "0.32", features = ["bundled"] }

# platform: single-instance (named mutex + named-pipe argv handoff)
# 0.58 -> 0.62 to unify with the app + wgpu-hal 29 (avoids two `windows` crate versions).
# Target-gated so Linux/macOS builds never pull the Win32 bindings.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_Pipes",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_IO",
] }
