[package]
name = "hyperpanes-terminal-widget"
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
publish = false

# Standalone workspace root (owns the heavy GPU/terminal deps; NOT part of the lean
# `rs/` core workspace). You OWN this file — adjust deps freely.
[workspace]

[dependencies]
# The headless core: consumed as a dependency (session_manager owns the live PTYs).
hyperpanes-core = { path = "../core" }

# Slint UI + its wgpu interop seam. `unstable-wgpu-29` exposes `slint::wgpu_29`
# (texture import via Image::try_from + a shared Device/Queue);
# `renderer-femtovg-wgpu` is the concrete wgpu renderer Slint needs at runtime.
# Pinned to our fork's exact rev 9dab2175b (PR head of slint-ui/slint#12000, branch popup-is-open)
# for `PopupWindow.is-open`. Pinned by rev (not branch) to stop floating-branch drift; that commit
# fixes is-open in the compiler passes (our COMPILED slint-build path). Must match the app crate.
# Slint master's femtovg-wgpu renderer links wgpu 29, so we use `unstable-wgpu-29` to match.
# default-features = false (minus `accessibility`) must match the app crate — see the note there.
slint = { git = "https://github.com/Eyalm321/slint", rev = "9dab2175b8d572296331df6cb7ff76cf7b31ce93", default-features = false, features = [
    "std",
    "backend-default",
    "renderer-femtovg",
    "renderer-software",
    "compat-1-2",
    "unstable-wgpu-29",
    "renderer-femtovg-wgpu",
] }
# wgpu MUST match the version Slint links (29) so the Texture types are identical.
wgpu = "29"

# Terminal model + VTE parser + damage tracking (same version as core — no type clash,
# we never pass alacritty types across the core boundary).
alacritty_terminal = "0.26"
# Glyph rasterization (coverage masks).
swash = "0.2"
# Glyph-atlas shelf packer (GPU path).
etagere = "0.2"
# Plain-old-data casts for instance/vertex buffers.
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1.0.102"

# System clipboard for copy-on-select / right-click paste (matches the Electron behavior).
arboard = "3"

# Drives the SessionManager (its per-session async driver tasks + batch timers). Match
# core's feature set so the runtime has time/sync/macros available.
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

[dev-dependencies]
# PNG encode for the headless font-fallback before/after verification bin only.
png = "0.17"
# Headless Slint platform for pointer-dispatch regression tests (tests/pointer_press.rs):
# pins that the pane's FocusScope can't swallow the first press. Same fork rev as `slint`.
i-slint-backend-testing = { git = "https://github.com/Eyalm321/slint", rev = "9dab2175b8d572296331df6cb7ff76cf7b31ce93" }

[build-dependencies]
slint-build = { git = "https://github.com/Eyalm321/slint", rev = "9dab2175b8d572296331df6cb7ff76cf7b31ce93" }

# Optimize deps even in dev so the software renderer is smooth in the demo.
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
