[package]
name = "spike-terminal-render"
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
publish = false

# Standalone workspace root so the heavy GPU/terminal deps never touch the core
# build. This crate is throwaway and owned entirely by track `spike-terminal-render`.
[workspace]

[dependencies]
# Slint UI + its wgpu interop seam. `unstable-wgpu-28` pins wgpu 28 and exposes
# `slint::wgpu_28` (texture import via Image::try_from + shared Device/Queue).
slint = { version = "1.16", features = ["unstable-wgpu-28", "renderer-femtovg-wgpu"] }
# wgpu MUST match the version Slint links (28) so the Texture types are identical.
wgpu = "28"
# Terminal model + VTE parser + damage tracking.
alacritty_terminal = "0.26"
# Real conpty-backed shell.
portable-pty = "0.9"
# Glyph rasterization (coverage masks).
swash = "0.2"
# Glyph-atlas shelf packer.
etagere = "0.2"
# Plain-old-data casts for instance/vertex buffers.
bytemuck = { version = "1", features = ["derive"] }
# Block on wgpu's async device requests when we need our own adapter.
pollster = "0.4"
anyhow = "1.0.102"

[build-dependencies]
slint-build = "1.16"

# Optimize deps even in dev so the flood/FPS numbers are meaningful.
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
